Fix hero overflow on mobile

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -107,6 +107,7 @@ figure {
 @media screen and (max-width: 500px) {
     .container {
         max-width: 100%;
-        padding: 0.75rem;
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
     }
 }
